--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,14 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/main_city"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/City"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="80dp"
+        android:clickable="true"
+        android:focusable="true"
         />
 
     <TextView
@@ -26,6 +29,7 @@
         />
 
     <TextView
+        android:id="@+id/main_cloudiness"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Cloudiness"
@@ -34,6 +38,7 @@
         />
 
     <TextView
+        android:id="@+id/main_humidity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Humidity"
