--- a/app/src/main/res/layout/activity_select_city.xml
+++ b/app/src/main/res/layout/activity_select_city.xml
@@ -1,32 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ActivitySelectCity">
 
     <EditText
+        android:id="@+id/et_select_city"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/enter_city"
         />
 
     <CheckBox
+        android:id="@+id/cb_cloudiness"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/Temperature"
+        android:text="@string/Cloudiness"
         android:checked="true"
         />
 
     <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Cloudiness"
-        />
-
-    <CheckBox
+        android:id="@+id/cb_humidity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Humidity"
+        android:checked="true"
         />
 
     <Button
