--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,41 +8,9 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/main_city"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/City"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="80dp"
-        android:clickable="true"
-        android:focusable="true"
-        />
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
-    <TextView
-        android:id="@+id/main_temperature"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Temperature"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="80dp"
-        />
-
-    <TextView
-        android:id="@+id/main_cloudiness"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Cloudiness"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="80dp"
-        />
-
-    <TextView
-        android:id="@+id/main_humidity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Humidity"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="80dp"
-        />
 </LinearLayout>
