--- a/app/src/main/res/layout/fragment_activity_select_city.xml
+++ b/app/src/main/res/layout/fragment_activity_select_city.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActivitySelectCity">
+    android:id="@+id/select_city_fragment">
 
     <EditText
         android:id="@+id/et_select_city"
@@ -17,7 +16,7 @@
         android:id="@+id/cb_cloudiness"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/Cloudiness"
+        android:text="@string/cloudiness"
         android:checked="true"
         />
 
@@ -25,7 +24,7 @@
         android:id="@+id/cb_humidity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/Humidity"
+        android:text="@string/humidity"
         android:checked="true"
         />
 
@@ -33,6 +32,8 @@
         android:id="@+id/btn_select_city"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
         android:text="@string/OK"
         />
 </LinearLayout>
