--- a/app/src/main/res/layout/fragment_activity_select_city.xml
+++ b/app/src/main/res/layout/fragment_activity_select_city.xml
@@ -5,12 +5,19 @@
     android:layout_height="match_parent"
     android:id="@+id/select_city_fragment">
 
-    <EditText
-        android:id="@+id/et_select_city"
-        android:layout_width="wrap_content"
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/enter_city"
-        />
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_select_city"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/enter_city"
+            android:singleLine="true"
+            />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <CheckBox
         android:id="@+id/cb_cloudiness"
@@ -28,7 +35,7 @@
         android:checked="true"
         />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_select_city"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
