--- a/app/src/main/res/values-ru/string.xml
+++ b/app/src/main/res/values-ru/string.xml
@@ -8,6 +8,7 @@
     <string name="humidity">Влажность</string>
     <string name="OK">OK</string>
     <string name="enter_city">Введите название города</string>
+    <string name="settings">Настройки</string>
     <string name="settings_style">Темный/светлый стиль</string>
     <string name="settings_language">Выберите язык</string>
 </resources>
