--- a/app/src/main/res/layout/fragment_activity_main.xml
+++ b/app/src/main/res/layout/fragment_activity_main.xml
@@ -21,13 +21,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/city"
-            android:layout_marginTop="80dp" />
+            android:layout_marginTop="40dp"
+            />
 
         <TextView
             android:id="@+id/main_city"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/city_hint" />
+            android:gravity="center_horizontal"
+            android:hint="@string/city_hint"
+            />
     </LinearLayout>
 
     <LinearLayout
@@ -41,13 +44,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/temperature"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="20dp"
+            />
 
         <TextView
             android:id="@+id/main_temperature"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="0"/>
+            android:text="0"
+            />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -60,21 +65,28 @@
     </androidx.recyclerview.widget.RecyclerView>
 
     <LinearLayout
-        android:id="@+id/main_cloudiness_container"
+        android:id="@+id/main_pressure_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
         android:orientation="vertical"
+        android:layout_marginTop="20dp"
         >
 
         <TextView
-            android:id="@+id/main_cloudiness"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/cloudiness"
+            android:text="@string/pressure"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp" />
+            />
+
+        <TextView
+            android:id="@+id/main_pressure"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            />
     </LinearLayout>
 
     <LinearLayout
@@ -84,14 +96,46 @@
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
         android:orientation="vertical"
+        android:layout_marginTop="20dp"
         >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/humidity"
+            android:layout_gravity="center_horizontal"
+            />
 
         <TextView
             android:id="@+id/main_humidity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/humidity"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp" />
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/main_wind_speed_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:layout_marginTop="20dp"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/wind_speed"
+            android:layout_gravity="center_horizontal"
+            />
+
+        <TextView
+            android:id="@+id/main_wind_speed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            />
     </LinearLayout>
 </LinearLayout>
